--- a/index.html
+++ b/index.html
@@ -44,24 +44,44 @@
 					<h2 class="visually_hidden">Benefits</h2>
 					<ul class="benefits_list">
 						<li class="benefit_item">
+							<div class="benefit_img">
+								<svg width="64" height="64">
+									<use href="./images/icons.svg#icon-antenna"></use>
+								</svg>
+							</div>
 							<h3 class="title_benefits">Strategy</h3>
 							<p class="txt_benefits">
 								Our goal is to identify the business problem to walk away with the perfect and creative solution.
 							</p>
 						</li>
 						<li class="benefit_item">
+							<div class="benefit_img">
+								<svg width="64" height="64">
+									<use href="./images/icons.svg#icon-clock"></use>
+								</svg>
+							</div>
 							<h3 class="title_benefits">Punctuality</h3>
 							<p class="txt_benefits">
 								Bring the key message to the brand's audience for the best price within the shortest possible time.
 							</p>
 						</li>
 						<li class="benefit_item">
+							<div class="benefit_img">
+								<svg width="64" height="64">
+									<use href="./images/icons.svg#icon-diagram"></use>
+								</svg>
+							</div>
 							<h3 class="title_benefits">Diligence</h3>
 							<p class="txt_benefits">
 								Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
 							</p>
 						</li>
 						<li class="benefit_item">
+							<div class="benefit_img">
+								<svg width="64" height="64">
+									<use href="./images/icons.svg#icon-astronaut"></use>
+								</svg>
+							</div>
 							<h3 class="title_benefits">Technologies</h3>
 							<p class="txt_benefits">
 								Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
@@ -70,7 +90,7 @@
 					</ul>
 				</div>
 			</section>
-
+			<!-- What sre we doing? -->
 			<section class="section">
 				<div class="service container">
 					<h2 class="service_title">What are we doing</h2>
@@ -97,6 +117,36 @@
 							<div class="team_card_text">
 								<h3 class="team_cards_header">Mark Guerrero</h3>
 								<p class="team_cards_description">Product Designer</p>
+								<ul class="social_icon">
+									<li class="social_icon_item">
+										<a href="">
+											<svg class="social_icon_logo" width="16" height="16">
+												<use href="./images/icons.svg#icon-instagram"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="social_icon_item">
+										<a href="">
+											<svg class="social_icon_logo" width="16" height="16">
+												<use href="./images/icons.svg#icon-twitter"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="social_icon_item">
+										<a href="">
+											<svg class="social_icon_logo" width="16" height="16">
+												<use href="./images/icons.svg#icon-facebook"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="social_icon_item">
+										<a href="">
+											<svg class="social_icon_logo" width="16" height="16">
+												<use href="./images/icons.svg#icon-linkedin2"></use>
+											</svg>
+										</a>
+									</li>
+								</ul>
 							</div>
 						</li>
 						<li class="team_cards">
@@ -123,15 +173,99 @@
 					</ul>
 				</div>
 			</section>
+			<!-- Customers -->
+			<section class="section">
+				<div class="container">
+					<h2 class="customers_title">Customers</h2>
+					<ul class="customer_list">
+						<li class="customer_logo">
+							<a class="link">
+								<svg class="icon" width="41" height="47">
+									<use href="./images/icons.svg#icon-Client1"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="customer_logo">
+							<a class="link">
+								<svg class="icon" width="40" height="52">
+									<use href="./images/icons.svg#icon-Client2"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="customer_logo">
+							<a class="link">
+								<svg class="icon" width="44" height="41">
+									<use href="./images/icons.svg#icon-Client3"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="customer_logo">
+							<a class="link">
+								<svg class="icon" width="84" height="41">
+									<use href="./images/icons.svg#icon-Client4"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="customer_logo">
+							<a class="link">
+								<svg class="icon" width="63" height="45">
+									<use href="./images/icons.svg#icon-Client5"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="customer_logo">
+							<a class="link">
+								<svg class="icon" width="94" height="44">
+									<use href="./images/icons.svg#icon-Client6"></use>
+								</svg>
+							</a>
+						</li>
+					</ul>
+				</div>
+			</section>
 		</main>
 		<!-- Logo buttom -->
 		<footer class="footer">
-			<div class="container">
-				<div></div>
-				<a href="./index.html" class="logo_footer"><span class="first_logo">WEB</span>STUDIO</a>
-				<p class="txt_footer">
-					Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-				</p>
+			<div class="container flex">
+				<div class="">
+					<a href="./index.html" class="logo_footer"><span class="first_logo">WEB</span>STUDIO</a>
+					<p class="txt_footer">
+						Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+					</p>
+				</div>
+				<div class="footer_social">
+					<h3 class="footer_title_social">Social media</h3>
+					<ul class="social_footer">
+						<li class="social_footer_item">
+							<a href="">
+								<svg class="social_icon_logo" width="24" height="24">
+									<use href="./images/icons.svg#icon-instagram"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="social_footer_item">
+							<a href="">
+								<svg class="social_icon_logo" width="24" height="24">
+									<use href="./images/icons.svg#icon-twitter"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="social_footer_item">
+							<a href="">
+								<svg class="social_icon_logo" width="24" height="24">
+									<use href="./images/icons.svg#icon-facebook"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="social_footer_item">
+							<a href="">
+								<svg class="social_icon_logo" width="24" height="24">
+									<use href="./images/icons.svg#icon-linkedin2"></use>
+								</svg>
+							</a>
+						</li>
+					</ul>
+				</div>
 			</div>
 		</footer>
 	</body>
