Fixed bugs reported by mentor

--- a/index.html
+++ b/index.html
@@ -119,28 +119,28 @@
 								<p class="team_cards_description">Product Designer</p>
 								<ul class="social_icon">
 									<li class="social_icon_item">
-										<a href="">
+										<a class="link" href="">
 											<svg class="social_icon_logo" width="16" height="16">
 												<use href="./images/icons.svg#icon-instagram"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="social_icon_item">
-										<a href="">
+										<a class="link" href="">
 											<svg class="social_icon_logo" width="16" height="16">
 												<use href="./images/icons.svg#icon-twitter"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="social_icon_item">
-										<a href="">
+										<a class="link" href="">
 											<svg class="social_icon_logo" width="16" height="16">
 												<use href="./images/icons.svg#icon-facebook"></use>
 											</svg>
 										</a>
 									</li>
 									<li class="social_icon_item">
-										<a href="">
+										<a class="link" href="">
 											<svg class="social_icon_logo" width="16" height="16">
 												<use href="./images/icons.svg#icon-linkedin2"></use>
 											</svg>
@@ -154,6 +154,36 @@
 							<div class="team_card_text">
 								<h3 class="team_cards_header">Tom Ford</h3>
 								<p class="team_cards_description">Frontend Developer</p>
+								<ul class="social_icon">
+									<li class="social_icon_item">
+										<a class="link" href="">
+											<svg class="social_icon_logo" width="16" height="16">
+												<use href="./images/icons.svg#icon-instagram"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="social_icon_item">
+										<a class="link" href="">
+											<svg class="social_icon_logo" width="16" height="16">
+												<use href="./images/icons.svg#icon-twitter"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="social_icon_item">
+										<a class="link" href="">
+											<svg class="social_icon_logo" width="16" height="16">
+												<use href="./images/icons.svg#icon-facebook"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="social_icon_item">
+										<a class="link" href="">
+											<svg class="social_icon_logo" width="16" height="16">
+												<use href="./images/icons.svg#icon-linkedin2"></use>
+											</svg>
+										</a>
+									</li>
+								</ul>
 							</div>
 						</li>
 						<li class="team_cards">
@@ -161,6 +191,36 @@
 							<div class="team_card_text">
 								<h3 class="team_cards_header">Camila Garcia</h3>
 								<p class="team_cards_description">Marketing</p>
+								<ul class="social_icon">
+									<li class="social_icon_item">
+										<a class="link" href="">
+											<svg class="social_icon_logo" width="16" height="16">
+												<use href="./images/icons.svg#icon-instagram"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="social_icon_item">
+										<a class="link" href="">
+											<svg class="social_icon_logo" width="16" height="16">
+												<use href="./images/icons.svg#icon-twitter"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="social_icon_item">
+										<a class="link" href="">
+											<svg class="social_icon_logo" width="16" height="16">
+												<use href="./images/icons.svg#icon-facebook"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="social_icon_item">
+										<a class="link" href="">
+											<svg class="social_icon_logo" width="16" height="16">
+												<use href="./images/icons.svg#icon-linkedin2"></use>
+											</svg>
+										</a>
+									</li>
+								</ul>
 							</div>
 						</li>
 						<li class="team_cards">
@@ -168,53 +228,83 @@
 							<div class="team_card_text">
 								<h3 class="team_cards_header">Daniel Wilson</h3>
 								<p class="team_cards_description">UI Designer</p>
+								<ul class="social_icon">
+									<li class="social_icon_item">
+										<a class="link" href="">
+											<svg class="social_icon_logo" width="16" height="16">
+												<use href="./images/icons.svg#icon-instagram"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="social_icon_item">
+										<a class="link" href="">
+											<svg class="social_icon_logo" width="16" height="16">
+												<use href="./images/icons.svg#icon-twitter"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="social_icon_item">
+										<a class="link" href="">
+											<svg class="social_icon_logo" width="16" height="16">
+												<use href="./images/icons.svg#icon-facebook"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="social_icon_item">
+										<a class="link" href="">
+											<svg class="social_icon_logo" width="16" height="16">
+												<use href="./images/icons.svg#icon-linkedin2"></use>
+											</svg>
+										</a>
+									</li>
+								</ul>
 							</div>
 						</li>
 					</ul>
 				</div>
 			</section>
 			<!-- Customers -->
-			<section class="section">
+			<section class="section customer">
 				<div class="container">
 					<h2 class="customers_title">Customers</h2>
 					<ul class="customer_list">
 						<li class="customer_logo">
-							<a class="link">
+							<a class="link customer_link">
 								<svg class="icon" width="41" height="47">
 									<use href="./images/icons.svg#icon-Client1"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="customer_logo">
-							<a class="link">
+							<a class="link customer_link">
 								<svg class="icon" width="40" height="52">
 									<use href="./images/icons.svg#icon-Client2"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="customer_logo">
-							<a class="link">
+							<a class="link customer_link">
 								<svg class="icon" width="44" height="41">
 									<use href="./images/icons.svg#icon-Client3"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="customer_logo">
-							<a class="link">
+							<a class="link customer_link">
 								<svg class="icon" width="84" height="41">
 									<use href="./images/icons.svg#icon-Client4"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="customer_logo">
-							<a class="link">
+							<a class="link customer_link">
 								<svg class="icon" width="63" height="45">
 									<use href="./images/icons.svg#icon-Client5"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="customer_logo">
-							<a class="link">
+							<a class="link customer_link">
 								<svg class="icon" width="94" height="44">
 									<use href="./images/icons.svg#icon-Client6"></use>
 								</svg>
@@ -237,28 +327,28 @@
 					<h3 class="footer_title_social">Social media</h3>
 					<ul class="social_footer">
 						<li class="social_footer_item">
-							<a href="">
+							<a class="footer_link link" href="">
 								<svg class="social_icon_logo" width="24" height="24">
 									<use href="./images/icons.svg#icon-instagram"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="social_footer_item">
-							<a href="">
+							<a class="footer_link link" href="">
 								<svg class="social_icon_logo" width="24" height="24">
 									<use href="./images/icons.svg#icon-twitter"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="social_footer_item">
-							<a href="">
+							<a class="footer_link link" href="">
 								<svg class="social_icon_logo" width="24" height="24">
 									<use href="./images/icons.svg#icon-facebook"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="social_footer_item">
-							<a href="">
+							<a class="footer_link link" href="">
 								<svg class="social_icon_logo" width="24" height="24">
 									<use href="./images/icons.svg#icon-linkedin2"></use>
 								</svg>
