--- a/portfolio.html
+++ b/portfolio.html
@@ -131,11 +131,46 @@
 			</section>
 		</main>
 		<footer class="footer">
-			<div class="container">
-				<a href="./index.html" class="logo_footer"><span class="first_logo">WEB</span>STUDIO</a>
-				<p class="txt_footer">
-					Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-				</p>
+			<div class="container flex">
+				<div class="">
+					<a href="./index.html" class="logo_footer"><span class="first_logo">WEB</span>STUDIO</a>
+					<p class="txt_footer">
+						Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+					</p>
+				</div>
+				<div class="footer_social">
+					<h3 class="footer_title_social">Social media</h3>
+					<ul class="social_footer">
+						<li class="social_footer_item">
+							<a class="footer_link link" href="">
+								<svg class="social_icon_logo" width="24" height="24">
+									<use href="./images/icons.svg#icon-instagram"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="social_footer_item">
+							<a class="footer_link link" href="">
+								<svg class="social_icon_logo" width="24" height="24">
+									<use href="./images/icons.svg#icon-twitter"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="social_footer_item">
+							<a class="footer_link link" href="">
+								<svg class="social_icon_logo" width="24" height="24">
+									<use href="./images/icons.svg#icon-facebook"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="social_footer_item">
+							<a class="footer_link link" href="">
+								<svg class="social_icon_logo" width="24" height="24">
+									<use href="./images/icons.svg#icon-linkedin2"></use>
+								</svg>
+							</a>
+						</li>
+					</ul>
+				</div>
 			</div>
 		</footer>
 	</body>
